# pysketball

./: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  Untitled.ipynb  dataset_description.md  pyproject.toml
.github/workflows/: release.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  pysketball.rst
pysketball/: nba_boxplot.py  nba_ranking.py  nba_scraper.py  nba_stats.py  nba_team_stats.py  nbastats.py  ranking.py
tests/: test_integration.py  test_nba_boxplot.py  test_nba_ranking.py  test_nba_scraper.py  test_nba_team_stats.py  test_nbastats.py  test_pysketball.py
