[tool.poetry]
name = "pysketball"
version = "0.1.0"
description = "This is a Python package that scraps tabular ESPN NBA data from https://www.espn.com/nba/stats/player/_/season/2019/seasontype/2 and processes it"
authors = ["Andres Pitta <apitta6@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
selenium = "^3.141.0"
requests = "^2.23.0"
altair = "^4.0.1"


[tool.poetry.dev-dependencies]
sphinx = "^2.4.3"

pytest = "^5.3.5"
sphinxcontrib-napoleon = "^0.7"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"