[tool.poetry]
name = "pysketball"
version = "0.1.1"
description = "This is a Python package that scraps tabular ESPN NBA data from https://www.espn.com/nba/stats/player/_/season/2019/seasontype/2 and processes it"
authors = ["Andres Pitta <apitta6@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/UBC-MDS/pysketball"
repository = "https://github.com/UBC-MDS/pysketball"
documentation = 'https://pysketball.readthedocs.io'

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
pytest = "^5.3.5"
numpy = "^1.18.1"
altair = "^4.0.1"
selenium = "^3.141.0"
requests = "^2.23.0"
python-semantic-release = "^4.10.0"


[tool.poetry.dev-dependencies]
sphinx = "^2.4.3"

pytest = "^5.3.5"
sphinxcontrib-napoleon = "^0.7"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"

[tool.semantic_release]
version_variable = "pysketball/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "yes"
patch_without_tag = "true"[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

